--- a/form.html
+++ b/form.html
@@ -76,7 +76,7 @@
 					alert("Password's length must be 8 or more character");
 				}
 			}
-			function submit(){
+			function submited(){
 				var g =document.getElementById("name").value;
 				document.write(g);
 			}
